--- a/main.html
+++ b/main.html
@@ -10,7 +10,18 @@
   <body>
     <main>
       <!-- solution start -->
-      
+       <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+    <div class="image-container">
+        <img src="" alt="Tile 1" class="img1">
+        <img src="" alt="Tile 2" class="img2">
+        <img src="" alt="Tile 3" class="img3">
+        <img src="" alt="Tile 4" class="img4">
+        <img src="" alt="Tile 5" class="img5">
+        
+    </div>
+    <button id="reset" style="display: none;">Reset</button>
+    <button id="verify" style="display: none;">Verify</button>
+    <p id="para"></p>
       <!-- solution end -->
     </main>
     <script src="./script.js"></script>
